<resources>
    <string name="app_name">Cash Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="error">Error</string>
    <string name="okay">Okay</string>

    <string name="accounts">Accounts</string>
    <string name="budgets">Budgets</string>
    <string name="goals">Goals</string>

    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="invalid_credentials">Invalid Username or Password</string>
    <string name="display_name">Display Name</string>
    <string name="create">Create</string>
    <string name="display_name_too_short">Display name too short</string>
    <string name="username_too_short">Username too short</string>
    <string name="password_too_short">Password too short</string>
    <string name="username_already_exists">Username already exists</string>

    <string name="accounts_total">Accounts Total:</string>
    <string name="interest_rate_format">Interest Rate: %.3f</string>
    <string name="balance_format">Balance: %s</string>
    <string name="delete_account">Delete Account?</string>
    <string name="delete_account_message">This will permanently delete this account and all
    transactions and goals associated with it. Are you sure?</string>
    <string name="confirm">Confirm</string>

    <string name="balance">Balance</string>
    <string name="action_create_new">Create New</string>
    <string name="create_transaction">Create Transaction</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="amount_hint">$9.81</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="new_category">New Category</string>
    <string name="category_name">Category Name</string>
    <string name="category_name_hint">e.g. \"Food\"</string>
    <string name="category_already_exists">Category already exists.</string>
    <string name="will_go_negative">This transaction will make your balance negative.</string>

    <string name="goals_summary">%1$s by %2$s</string>
    <string name="percent_of_goal">%1$.2f of goal</string>

    <string name="create_account_hint">e.g. Savings Account</string>
    <string name="balance_hint">127.01</string>
    <string name="interest_rate_hint">e.g. 1% is 0.01</string>
    <string name="account_name">Account Name</string>
    <string name="starting_balance">Starting Balance</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="interest_rate_frequency">Interest Rate Frequency</string>
    <string-array name="interest_frequencies">
        <item>Monthly</item>
        <item>Quarterly</item>
        <item>Every 6 Months</item>
        <item>Yearly</item>
        <item>Never</item>
    </string-array>
    <string name="account_already_exists">Account already exists.</string>

    <string name="budget_name">Budget Name</string>
    <string name="budget_name_hint">e.g. My Budget</string>
    <string name="goal_amount">Goal Amount</string>
    <string name="goal_amount_hint">250.00</string>
    <string name="budget_already_exists">Budget already exists.</string>

    <string name="goal_name">Goal Name</string>
    <string name="goal_name_hint">e.g. New Shoes Money</string>
    <string name="goal_already_exists">Goal already exists.</string>
    <string name="goal_account">Goal Account</string>

    <string name="action_edit">Edit</string>
    <string name="transfer">Transfer</string>
    <string name="transfer_money_to">Transfer money to…</string>
    <string name="positive">Add</string>
    <string name="negative">Spend</string>

    <string name="delete_user">Delete Current User</string>
    <string name="change_display_name">Change Display Name</string>
    <string name="delete_user_message">Are you sure? This will delete your user and all associated
        accounts.</string>
    <string name="display_name_hint">Display Name (e.g. William Hester)</string>

</resources>
