<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_name"/>

    <EditText android:id="@+id/account_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:inputType="textCapWords"
        android:hint="@string/create_account_hint"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/starting_balance"/>

    <EditText android:id="@+id/balance"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:inputType="numberDecimal"
        android:hint="@string/balance_hint"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interest_rate"/>

    <EditText android:id="@+id/interest_rate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:inputType="numberDecimal"
        android:hint="@string/interest_rate_hint"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interest_rate_frequency"/>

    <Spinner android:id="@+id/interest_frequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/interest_frequencies"/>

    <Button android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"/>

</LinearLayout>
