<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goal_name"/>

    <EditText android:id="@+id/goal_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:inputType="textCapWords"
        android:hint="@string/goal_name_hint"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goal_amount"/>

    <EditText android:id="@+id/goal_amount"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:inputType="numberDecimal"
        android:hint="@string/goal_amount_hint"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goal_account"/>

    <Spinner android:id="@+id/accounts_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"/>

</LinearLayout>
