<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <EditText android:id="@+id/display_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/display_name"/>

    <EditText android:id="@+id/username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/username"/>

    <EditText android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <Button android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"/>

</LinearLayout>
